--- a/rescript-lang.org.css
+++ b/rescript-lang.org.css
@@ -1,3 +1,9 @@
+/* ==UserStyle==
+@name        rescript-lang.org
+@description This is your new file, start writing code
+@match       https://rescript-lang.org/*
+==/UserStyle== */
+
 :root {
   /* Catppuccin Mocha */
   --rosewater: #f5e0dc;
