--- a/npmjs.com.css
+++ b/npmjs.com.css
@@ -1,13 +1,77 @@
+:root {
+  /* Catppuccin Mocha */
+  --rosewater: #f5e0dc;
+  --flamingo: #f2cdcd;
+  --pink: #f5c2e7;
+  --mauve: #cba6f7;
+  --red: #f38ba8;
+  --maroon: #eba0ac;
+  --peach: #fab387;
+  --yellow: #f9e2af;
+  --green: #a6e3a1;
+  --teal: #94e2d5;
+  --sky: #89dceb;
+  --sapphire: #74c7ec;
+  --blue: #89b4fa;
+  --lavender: #b4befe;
+  --text: #cdd6f4;
+  --subtext1: #bac2de;
+  --subtext0: #a6adc8;
+  --overlay2: #9399b2;
+  --overlay1: #7f849c;
+  --overlay0: #6c7086;
+  --surface2: #585b70;
+  --surface1: #45475a;
+  --surface0: #313244;
+  --base: #1e1e2e;
+  --mantle: #181825;
+  --crust: #11111b;
+}
+
+
+html,
 body,
 #main,
 #footer,
 p,
 div,
-span {
-  background-color: hsl(0, 0%, 18%) !important;
-  color: hsl(0, 0%, 65%) !important;
+span,
+li {
+  background-color: var(--base) !important;
+  color: var(--text) !important;
 }
 
-pre, pre * {
-  background-color: hsl(0, 0%, 25%) !important;
+code,
+pre,
+pre *,
+input {
+  background-color: var(--surface0) !important;
+}
+
+table * {
+  background-color: var(--surface0) !important;
+  border-color: var(--surface1) !important;
+}
+
+thead * {
+  background-color: var(--surface1) !important;
+  border-color: var(--surface2) !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  color: var(--lavender) !important;
+}
+
+#search > div {
+  border: none !important;
+}
+
+footer,
+footer * {
+  background-color: var(--base) !important;
+  color: var(--text) !important;
 }
